Updating pom.xml file