@@ -11,6 +11,13 @@
 		<!--<dependency> <groupId>reporter</groupId> <artifactId>reporter</artifactId> 
 			<version>1.0.0</version> <scope>system</scope> <systemPath>${project.basedir}\lib\CignitiReporter-1.0.jar</systemPath> 
 			</dependency> -->
+		<!-- https://mvnrepository.com/artifact/com.beust/jcommander -->
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<version>1.48</version>
+		</dependency>
+
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-core</artifactId>
@@ -23,11 +30,11 @@
 			<version>0.2.6</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-java -->
-		<dependency>
+		<!--<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>1.2.5</version>
-		</dependency>
+		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
 		<dependency>
 			<groupId>info.cukes</groupId>
@@ -167,6 +174,16 @@
 			<version>1.2.4</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
+<!--
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-failsafe-plugin</artifactId>
+			<version>2.20</version>
+			<scope>test</scope>
+		</dependency>
+-->
+
 
 	</dependencies>
 	<build>
@@ -185,24 +202,80 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
 				<configuration>
+					<argLine>-Xmx1024m</argLine>
+					<parallel>methods</parallel>
+					<threadCount>5</threadCount>
+					<properties>
+						<!--
+                        <property>
+                           <name>usedefaultlisteners</name>
+                           <value>false</value>
+                        </property>
+                        -->
+						<property>
+							<name>listener</name>
+							<value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value>
+						</property>
+					</properties>
+					<!--
+                    <workingDirectory>target/</workingDirectory>
+                    -->
+					<!--   <suiteXmlFiles>
+                          <suiteXmlFile>${project.build.testOutputDirectory}/${testset}</suiteXmlFile>
+                       </suiteXmlFiles> -->
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>testngCucumber.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<!--Below is the previous Build section before running through command prompt-->
+	<!--<build>
+		<plugins>
+			&lt;!&ndash;<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.14.1</version>
+				<configuration>
+					<forkMode>always</forkMode>
+				</configuration>
+			</plugin>&ndash;&gt;
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>testngCucumber.xml</suiteXmlFile>
 
 					</suiteXmlFiles>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 
 					<includes>
 						<include>**/*IT.class</include>
 					</includes>
 				</configuration>
 				<dependencies>
-					<!-- https://mvnrepository.com/artifact/org.apache.maven.surefire/surefire-junit47 -->
+					&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.maven.surefire/surefire-junit47 &ndash;&gt;
 					<dependency>
 						<groupId>org.apache.maven.surefire</groupId>
 						<artifactId>surefire-junit47</artifactId>
 						<version>2.19.1</version>
 					</dependency>
+					&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.maven.surefire/surefire-testng &ndash;&gt;
+
 
 				</dependencies>
 			</plugin>
@@ -226,6 +299,6 @@
 			</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</build>-->
 
 </project>
